--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eladmin-web",
   "version": "2.6.0",
-  "description": "跨国峰会 后台管理",
+  "description": "奥帆海洋文化旅游区",
   "author": "Xinshidian",
   "license": "Apache-2.0",
   "scripts": {
